--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  file_picker: ^8.1.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
